Nav is ready for early IE

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         
         <script type="text/javascript" src="js/semanticTagHelper.js"></script>       
     <![endif]--> 
+    <!--[if lt IE 8]>
+        <link type="text/css" rel="stylesheet" href="css/nat-lt-ie8.css" /> 
+    <![endif]--> 
 </head>
 <body>
     <header class="nat_banner" role="banner">
@@ -54,25 +57,25 @@
             <ul class="nat_main__imageCarousel___navigation" role="navigation">
                 <li>
                     <figure>
-                        <img src="images/nat_main__imageCarousel___thumbnail1.jpg" alt="Downtown Baltimore" title="Downtown Baltimore" data-description="Check out the USS Torsk at Baltimore's historic Maritime Museum." data-mainImageURL="images/nat_main__imageCarousel___mainImage1.jpg" />
+                        <img src="images/nat_main__imageCarousel___thumbnail1.jpg" alt="Downtown Baltimore" title="Downtown Baltimore" data-description="Check out the USS Torsk at Baltimore's historic Maritime Museum." data-mainImageURL="images/nat_main__imageCarousel___mainImage1.jpg" data-linkURL="#Carousel1" />
                         <figcaption></figcaption>
                     </figure>
                 </li>
                 <li>
                     <figure>
-                        <img src="images/nat_main__imageCarousel___thumbnail2.jpg" alt="Exploring the Venetian" title="Exploring the Venetian" data-description="Enjoy the best gondola ride on this side of the Atlantic Ocean." data-mainImageURL="images/nat_main__imageCarousel___mainImage2.jpg" />
+                        <img src="images/nat_main__imageCarousel___thumbnail2.jpg" alt="Exploring the Venetian" title="Exploring the Venetian" data-description="Enjoy the best gondola ride on this side of the Atlantic Ocean." data-mainImageURL="images/nat_main__imageCarousel___mainImage2.jpg" data-linkURL="#Carousel2" />
                         <figcaption></figcaption>
                     </figure>
                 </li>
                 <li>
                     <figure>
-                        <img src="images/nat_main__imageCarousel___thumbnail3.jpg" alt="London After Dark" title="London After Dark" data-description="Enjoy the pubs along the river Thames & get spectacular view from the London Eye." data-mainImageURL="images/nat_main__imageCarousel___mainImage3.jpg" />
+                        <img src="images/nat_main__imageCarousel___thumbnail3.jpg" alt="London After Dark" title="London After Dark" data-description="Enjoy the pubs along the river Thames & get spectacular view from the London Eye." data-mainImageURL="images/nat_main__imageCarousel___mainImage3.jpg" data-linkURL="#Carousel3" />
                         <figcaption></figcaption>
                     </figure>
                 </li>
                 <li>
                     <figure>
-                        <img src="images/nat_main__imageCarousel___thumbnail4.jpg" alt="Mount Rushmore" title="Mount Rushmore" data-description="Marvel at the majestic beauty of the Black Hills and come face to face with American history." data-mainImageURL="images/nat_main__imageCarousel___mainImage4.jpg" />
+                        <img src="images/nat_main__imageCarousel___thumbnail4.jpg" alt="Mount Rushmore" title="Mount Rushmore" data-description="Marvel at the majestic beauty of the Black Hills and come face to face with American history." data-mainImageURL="images/nat_main__imageCarousel___mainImage4.jpg" data-linkURL="#Carousel4" />
                         <figcaption></figcaption>
                     </figure>
                 </li>
@@ -245,9 +248,15 @@
         </ul>
     </footer>
     <script type="text/javascript" src="js/libraries/jquery-min.js"></script>
+    <script type="text/javascript" src="js/nat.js"></script>
+    <!--[if lte IE 9]>	    
+        <script type="text/javascript" src="js/nat-lte-ie9.js"></script>
+    <![endif]-->  
     <!--[if lt IE 9]>	    
         <script type="text/javascript" src="js/nat-lt-ie9.js"></script>
-    <![endif]-->
-    <script type="text/javascript" src="js/nat.js"></script>
+    <![endif]-->   
+    <!--[if lt IE 8]>	    
+        <script type="text/javascript" src="js/nat-lt-ie8.js"></script>
+    <![endif]--> 
 </body>
 </html>
