--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
             <input autocomplete="on" name="nat_banner__searchQuery" type="text" placeholder="Search" />
             <input type="submit" name="nat_banner__searchSubmit"  value="" />
         </form>
-        <ul class="nat_banner__account">
-            <li><a href="#myAccount">My Account</a></li>
-            <li><a href="#mySubscription">My Subscription</a></li>
-            <li><a href="#mySubscription">My Articles</a></li>
-        </ul>        
+        <div class="nat_banner__account" role="navigation">
+            <ul>
+                <li><a href="#myAccount">My Account</a></li>
+                <li><a href="#mySubscription">My Subscription</a></li>
+                <li><a href="#mySubscription">My Articles</a></li>
+            </ul> 
+        </div>       
     </header>
     <nav class="nat_navigation">
         <ul>
@@ -101,7 +103,7 @@
                 <li><a href="#Australia">Australia</a></li>
                 <li><a href="#AllDestinations">All Destinations</a></li>
             </ul>
-            <h2 class="nat_main__browseCategoriesClosed"><span>Getaways</span></h2>
+            <h2><span>Getaways</span></h2>
             <ul>
                 <li><a href="#AdventureVacations">Adventure Vacations</a></li>
                 <li><a href="#BeachVacations">Beach Vacations</a></li>
