--- a/index.html
+++ b/index.html
@@ -2,15 +2,9 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <!-- TODO Add open graph tags and icons stuff -->  
     <title>Crispin &amp; Mulberry</title>
-    <link rel="stylesheet" href="css/nat.css" />        
-    <!--[if IE]>
-        <link type="text/css" rel="stylesheet" href="css/nat-ie.css" />  
-    <![endif]--> 
+    <link rel="stylesheet" href="css/nat.css" />  
     <!--[if lte IE 9]>
         <link type="text/css" rel="stylesheet" href="css/nat-lte-ie9.css" /> 
     <![endif]-->   
@@ -42,12 +36,12 @@
     </header>
     <nav class="nat_navigation">
         <ul>
-            <li><a href="#destinations">Destinations</a></li>
-            <li><a href="#getaways">Getaways</a></li>
-            <li><a href="#travelTips">Travel Tips</a></li>
-            <li class="nat_navigation__selected"><a href="#newsAndFeatures">News &amp; Features</a></li>
-            <li><a href="#mySubscription">Contests</a></li>
-            <li><a href="#mySubscription">Contact Us</a></li>
+            <li><a href="#Destinations">Destinations</a></li>
+            <li><a href="#Getaways">Getaways</a></li>
+            <li><a href="#TravelTips">Travel Tips</a></li>
+            <li class="nat_navigation__selected"><a href="#NewsAndFeatures">News &amp; Features</a></li>
+            <li><a href="#Contests">Contests</a></li>
+            <li><a href="#Contact">Contact Us</a></li>
         </ul>
     </nav>
     <div class="nat_main" role="main">
@@ -218,7 +212,7 @@
                     <h1>Win an all inclusive trip to visit the famous Yeti Shrine deep in the heart of Asia</h1>
                 </article>
             </a>
-            <a href="#CurrentContest1">
+            <a href="#CurrentContest2">
             <article>
                 <img src="images/nat_main__currentContest2.jpg" alt="" title="" />
                 <h1>Win a mystical trip to Bath that includes a guided tour of Stonehenge</h1>
